--- a/app/src/main/res/layout/content_root.xml
+++ b/app/src/main/res/layout/content_root.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,20 +8,95 @@
     tools:context="com.kinitoapps.handcraftsxyz.RootActivity"
     tools:showIn="@layout/app_bar_root">
 
-<android.support.v4.view.ViewPager
-    android:layout_width="match_parent"
-    android:id="@+id/viewpager"
-    android:layout_height="480dp">
-</android.support.v4.view.ViewPager>
 
-    <me.relex.circleindicator.CircleIndicator
-        android:id="@+id/indicator"
-        android:layout_alignBottom="@id/viewpager"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp"/>
+        android:layout_height="wrap_content">
 
 
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            app:layout_constraintDimensionRatio="H,4:5"
+            android:layout_width="match_parent"
+            android:layout_height="0dp" />
+
+        <me.relex.circleindicator.CircleIndicator
+            android:id="@+id/indicator"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:baselineAligned="true"
+            app:layout_constraintBottom_toBottomOf="@+id/viewpager" />
+
+        <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/viewpager"
+        android:padding="8dp"
+        android:layout_below="@id/viewpager">
 
 
+        <ImageView
+        android:id="@+id/tile_image1"
+        android:paddingRight="4dp"
+        android:layout_width="0dp"
+        android:paddingBottom="4dp"
+        android:layout_height="0dp"
+        android:src="@drawable/wee"
+        app:layout_constraintDimensionRatio="H,1:1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/tile_image2"
+        app:layout_constraintTop_toBottomOf="@id/guideline"
+        android:paddingEnd="4dp" />
 
-</RelativeLayout>
+        <ImageView
+        android:id="@+id/tile_image2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:paddingLeft="4dp"
+        android:paddingBottom="4dp"
+        android:src="@drawable/woo"
+        app:layout_constraintDimensionRatio="H,1:1"
+        app:layout_constraintLeft_toRightOf="@+id/tile_image1"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guideline"
+        android:paddingStart="4dp" />
+
+        <ImageView
+        android:id="@+id/tile_image3"
+        app:layout_constraintTop_toBottomOf="@id/tile_image1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:paddingTop="4dp"
+        android:paddingRight="4dp"
+        android:src="@drawable/woo"
+        app:layout_constraintDimensionRatio="H,1:1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/tile_image2"
+        />
+
+        <ImageView
+        android:id="@+id/tile_image4"
+        app:layout_constraintTop_toBottomOf="@id/tile_image2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:paddingTop="4dp"
+        android:src="@drawable/wee"
+        android:paddingLeft="4dp"
+        app:layout_constraintDimensionRatio="H,1:1"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/tile_image1"
+        />
+
+        <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline"
+        app:layout_constraintGuide_begin="40dp"
+        android:orientation="horizontal" />
+
+        </android.support.constraint.ConstraintLayout>
+
+
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
