--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -19,6 +19,9 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        app:itemTextColor="@android:color/black"
+        app:itemTextAppearance="?android:attr/textAppearanceMedium"
+        app:theme="@style/NavigationDrawerStyle"
         app:headerLayout="@layout/nav_header_root"
         app:menu="@menu/activity_root_drawer" />
 
