--- a/app/src/main/res/layout/app_bar_root.xml
+++ b/app/src/main/res/layout/app_bar_root.xml
@@ -20,7 +20,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_root" />
-
+    <!--<include layout="@layout/content_root" />-->
+    <FrameLayout
+        android:id="@+id/main_content"
+        android:layout_width="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_height="match_parent"/>
 
 </android.support.design.widget.CoordinatorLayout>
