--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.kinitoapps.handcraftsxyz.RootActivity"
-    tools:showIn="@layout/app_bar_root">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
     <android.support.constraint.ConstraintLayout
