--- a/app/src/main/res/layout/fragment_shop_by_category.xml
+++ b/app/src/main/res/layout/fragment_shop_by_category.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kinitoapps.handcraftsxyz.shop_by_category">
+    tools:context="com.kinitoapps.handcraftsxyz.shop_by_categoryFragment">
 
     <!-- TODO: Update blank fragment layout -->
         <ImageView
