--- a/app/src/main/res/menu/activity_root_drawer.xml
+++ b/app/src/main/res/menu/activity_root_drawer.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="none">
@@ -16,7 +17,8 @@
 
     </group>
 
-    <group android:checkableBehavior="none" android:id="@+id/group_menu">
+    <group android:checkableBehavior="none"
+        android:id="@+id/group_menu">
         <item
             android:id="@+id/nav_settings"
             android:title="Settings" />
