--- a/app/src/main/res/layout/custom_image_for_slider.xml
+++ b/app/src/main/res/layout/custom_image_for_slider.xml
@@ -3,7 +3,6 @@
 <ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-        android:src="@mipmap/ic_launcher"
         android:id="@+id/imageView"
         android:scaleType="centerCrop"
-        android:layout_height="480dp" />
+        android:layout_height="wrap_content"/>
