--- a/app/src/main/res/layout/product_layout.xml
+++ b/app/src/main/res/layout/product_layout.xml
@@ -22,10 +22,12 @@
         android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
         android:layout_marginTop="4dp"
-        android:text="TextView"
+        android:text="TextView TextView TextView TextView TextView TextView TextView TextView "
         android:maxLines="2"
         android:ellipsize="end"
+        android:textSize="16sp"
         android:autoSizeTextType="uniform"
         android:layout_marginLeft="2dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -36,11 +38,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="2dp"
-        android:layout_marginTop="2dp"
         android:text="by rohan_xyz"
         android:maxLines="2"
         android:ellipsize="end"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
+    <TextView
+        android:id="@+id/textViewPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="2dp"
+        android:textSize="20sp"
+        android:text="Rs. 60"
+        android:maxLines="2"
+        android:ellipsize="end"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewBy" />
 
 </android.support.constraint.ConstraintLayout>
