--- a/app/src/main/res/layout/fragment_shop_by_category.xml
+++ b/app/src/main/res/layout/fragment_shop_by_category.xml
@@ -6,9 +6,9 @@
     tools:context="com.kinitoapps.handcraftsxyz.shop_by_categoryFragment">
 
     <!-- TODO: Update blank fragment layout -->
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/woo"/>
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:id="@+id/categories_recycler_view"
+            android:layout_height="wrap_content"/>
 
 </LinearLayout>
