--- a/app/src/main/res/layout/product_layout.xml
+++ b/app/src/main/res/layout/product_layout.xml
@@ -27,6 +27,7 @@
         android:text="TextView TextView TextView TextView TextView TextView TextView TextView "
         android:maxLines="2"
         android:ellipsize="end"
+        android:maxHeight="32dp"
         android:textSize="16sp"
         android:autoSizeTextType="uniform"
         android:layout_marginLeft="2dp"
@@ -39,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="2dp"
         android:text="by rohan_xyz"
-        android:maxLines="2"
+        android:maxLines="1"
         android:ellipsize="end"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
@@ -49,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="2dp"
         android:textSize="20sp"
-        android:text="Rs. 60"
+        android:text="₹ 60"
         android:maxLines="2"
         android:ellipsize="end"
         app:layout_constraintLeft_toLeftOf="parent"
