--- a/app/src/main/res/layout/product_layout.xml
+++ b/app/src/main/res/layout/product_layout.xml
@@ -8,52 +8,82 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="H,1:1"
-        android:layout_marginTop="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/woo" />
+    android:id="@+id/imageView"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    app:layout_constraintDimensionRatio="H,1:1"
+    android:layout_marginTop="8dp"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:srcCompat="@drawable/woo" />
 
     <TextView
-        android:id="@+id/textViewTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
+        android:id="@+id/textViewTitle"
+        android:text="Product Name"
         android:layout_marginTop="4dp"
-        android:text="TextView TextView TextView TextView TextView TextView TextView TextView "
-        android:maxLines="2"
+        android:maxLines="1"
         android:ellipsize="end"
-        android:maxHeight="32dp"
-        android:textSize="16sp"
-        android:autoSizeTextType="uniform"
-        android:layout_marginLeft="2dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@id/imageView" />
 
     <TextView
         android:id="@+id/textViewBy"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="2dp"
-        android:text="by rohan_xyz"
         android:maxLines="1"
         android:ellipsize="end"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
+        android:textSize="12sp"
+        android:text="appleshul"
+        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />
+
     <TextView
         android:id="@+id/textViewPrice"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="2dp"
-        android:textSize="20sp"
-        android:text="₹ 60"
-        android:maxLines="2"
-        android:ellipsize="end"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewBy" />
+        android:text="21000"
+        app:layout_constraintTop_toBottomOf="@id/textViewBy" />
+
+
+    <!--<TextView-->
+        <!--android:id="@+id/textViewTitle"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginLeft="4dp"-->
+        <!--android:layout_marginTop="4dp"-->
+        <!--android:autoSizeTextType="uniform"-->
+        <!--android:ellipsize="end"-->
+        <!--android:maxHeight="32dp"-->
+        <!--android:maxLines="2"-->
+        <!--android:text="TextView TextView TextView TextView TextView TextView TextView TextView "-->
+        <!--android:textSize="16sp"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/imageView"-->
+        <!--android:layout_marginRight="8dp" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/textViewBy"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginLeft="2dp"-->
+        <!--android:text="by rohan_xyz"-->
+        <!--android:maxLines="1"-->
+        <!--android:ellipsize="end"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />-->
+    <!--<TextView-->
+        <!--android:id="@+id/textViewPrice"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginLeft="2dp"-->
+        <!--android:textSize="20sp"-->
+        <!--android:text="₹ 60"-->
+        <!--android:maxLines="2"-->
+        <!--android:ellipsize="end"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/textViewBy" />-->
 
 </android.support.constraint.ConstraintLayout>
