--- a/app/src/main/res/layout/fragment_store_page.xml
+++ b/app/src/main/res/layout/fragment_store_page.xml
@@ -47,6 +47,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
             android:text="11.1K Subscribers"
+            android:id="@+id/store_subs"
             android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@id/store_dp"
             app:layout_constraintTop_toBottomOf="@id/store_username" />
