--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -82,7 +82,7 @@
                     android:layout_height="wrap_content"
                     android:text="Discover"
                     android:textColor="#000"
-
+                    android:id="@+id/discover_text"
                     android:padding="16dp"
                     android:textSize="20sp" />
 
