--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -41,6 +41,18 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:text="SIGN UP"
+                android:textSize="32sp"
+                android:background="#123a8a"
+                android:id="@+id/signup"
+                android:textColor="#000"
+                android:gravity="center"
+                android:layout_marginTop="?attr/actionBarSize"
+                />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -48,6 +60,8 @@
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
                 android:layout_height="wrap_content">
+
+
 
                 <TextView
                     android:layout_width="match_parent"
@@ -57,7 +71,7 @@
                     android:id="@+id/home_text"
                     android:padding="16dp"
                     android:textSize="20sp"
-                    android:layout_marginTop="?attr/actionBarSize" />
+                     />
 
                 <TextView
                     android:layout_width="match_parent"
