--- a/app/src/main/res/layout/activity_about_store.xml
+++ b/app/src/main/res/layout/activity_about_store.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kinitoapps.handcraftsxyz.AboutStoreActivity">
+    tools:context="com.kinitoapps.handcraftsxyz.activities.AboutStoreActivity">
 
 </android.support.constraint.ConstraintLayout>
