--- a/app/src/main/res/layout/app_bar_root.xml
+++ b/app/src/main/res/layout/app_bar_root.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kinitoapps.handcraftsxyz.RootActivity">
+    tools:context="com.kinitoapps.handcraftsxyz.activities.RootActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
