--- a/app/src/main/res/layout/fragment_default_discover.xml
+++ b/app/src/main/res/layout/fragment_default_discover.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kinitoapps.handcraftsxyz.DefaultDiscoverFragment">
+    tools:context="com.kinitoapps.handcraftsxyz.fragments.DefaultDiscoverFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
