--- a/app/src/main/res/layout/fragment_discover_store.xml
+++ b/app/src/main/res/layout/fragment_discover_store.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kinitoapps.handcraftsxyz.DiscoverStoreFragment">
+    tools:context="com.kinitoapps.handcraftsxyz.fragments.DiscoverStoreFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.constraint.ConstraintLayout
