--- a/app/src/main/res/layout/review_sample.xml
+++ b/app/src/main/res/layout/review_sample.xml
@@ -10,41 +10,38 @@
         android:id="@+id/reviewer_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/review_stars"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:layout_marginLeft="16dp"
         android:text="Reviewer's Name"
-        android:textStyle="bold"
-        android:layout_marginStart="16dp" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/review_stars"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="2dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/reviewer_name"
+        android:layout_marginLeft="16dp"
         android:text="★★★★★"
-
         android:textSize="15sp" />
 
     <TextView
         android:id="@+id/review_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/reviewer_name"
-        android:layout_alignStart="@+id/reviewer_name"
-        android:layout_marginRight="16dp"
-        android:layout_below="@+id/reviewer_name"
-        android:layout_marginTop="8dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="16dp"
+        android:layout_below="@+id/review_stars"
+        android:layout_marginTop="2dp"
         android:text="Lorem Ipsum Dolor sit Amer"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="16dp" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </RelativeLayout>
