--- a/app/src/main/res/layout/fragment_product_page.xml
+++ b/app/src/main/res/layout/fragment_product_page.xml
@@ -197,7 +197,7 @@ Description, description lorem ipsum dolor sit amer."
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="24dp"
-                android:text="4.2★"
+                    android:text="4.2★"
                 android:textSize="32sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/reviews_head_t" />
@@ -215,28 +215,33 @@ Description, description lorem ipsum dolor sit amer."
                 app:layout_constraintTop_toBottomOf="@id/reviews_head_t">
 
                 <View
-                    android:layout_width="200dp"
+                    android:layout_width="0dp"
+                    android:id="@+id/bar5"
                     android:layout_height="11dp"
                     android:background="#123" />
 
                 <View
-                    android:layout_width="20dp"
+                    android:layout_width="0dp"
                     android:layout_height="11dp"
+                    android:id="@+id/bar4"
                     android:background="#456" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="11dp"
+                    android:id="@+id/bar3"
                     android:background="#789" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="11dp"
+                    android:id="@+id/bar2"
                     android:background="#abc" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="11dp"
+                    android:id="@+id/bar1"
                     android:background="#cde" />
 
             </LinearLayout>
