--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_margin="8dp"
+        android:padding="8dp"
         android:id="@+id/category_name"
         android:text="Category 1"
         android:layout_height="wrap_content" />
