--- a/app/src/main/res/layout/layout_product.xml
+++ b/app/src/main/res/layout/layout_product.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal"
     android:padding="4dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
     android:id="@+id/imageView"
