--- a/app/src/main/res/layout/layout_subscription_item.xml
+++ b/app/src/main/res/layout/layout_subscription_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:layout_width="108dp"
@@ -14,9 +14,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="8dp"
         android:text="Lorem Ipsum"
         android:textSize="16sp"
